Add numbers and operation buttons

--- a/index.html
+++ b/index.html
@@ -1,20 +1,38 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Calculator</title>
     <script src="./script.js" defer></script>
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
-   <div class="header">
-    <h1>Cool Header</h1>
-    <p>have you ever seen a cooler header?</p>
-   </div>
-   <div class="calculator-container">
-    <div class="number-buttons"></div>
-    <div class="operator-buttons"></div>
-   </div>
-</body>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
+    <div class="header">
+      <h1>Cool Header</h1>
+      <p>have you ever seen a cooler header?</p>
+    </div>
+    <div class="calculator-container">
+      <div class="number-buttons-container">
+        <button class="number-buttons">1</button>
+        <button class="number-buttons">2</button>
+        <button class="number-buttons">3</button>
+        <button class="number-buttons">4</button>
+        <button class="number-buttons">5</button>
+        <button class="number-buttons">6</button>
+        <button class="number-buttons">7</button>
+        <button class="number-buttons">8</button>
+        <button class="number-buttons">9</button>
+        <button class="number-buttons">0</button>
+      </div>
+      <div class="operator-buttons-container">
+        <button class="operator-buttons">+</button>
+        <button class="operator-buttons">-</button>
+        <button class="operator-buttons">x</button>
+        <button class="operator-buttons">/</button>
+        <button class="operator-buttons">!</button>
+        <button class="operator-buttons">√</button>
+      </div>
+    </div>
+  </body>
 </html>
