--- a/index.html
+++ b/index.html
@@ -13,25 +13,27 @@
       <p>have you ever seen a cooler header?</p>
     </div>
     <div class="calculator-container">
-      <div class="number-buttons-container">
-        <button class="number-buttons">1</button>
-        <button class="number-buttons">2</button>
-        <button class="number-buttons">3</button>
-        <button class="number-buttons">4</button>
-        <button class="number-buttons">5</button>
-        <button class="number-buttons">6</button>
-        <button class="number-buttons">7</button>
-        <button class="number-buttons">8</button>
-        <button class="number-buttons">9</button>
-        <button class="number-buttons">0</button>
-      </div>
-      <div class="operator-buttons-container">
-        <button class="operator-buttons">+</button>
-        <button class="operator-buttons">-</button>
-        <button class="operator-buttons">x</button>
-        <button class="operator-buttons">/</button>
-        <button class="operator-buttons">!</button>
-        <button class="operator-buttons">√</button>
+      <div class="all-buttons-container">
+        <div class="number-buttons-container">
+          <button class="number-buttons">1</button>
+          <button class="number-buttons">2</button>
+          <button class="number-buttons">3</button>
+          <button class="number-buttons">4</button>
+          <button class="number-buttons">5</button>
+          <button class="number-buttons">6</button>
+          <button class="number-buttons">7</button>
+          <button class="number-buttons">8</button>
+          <button class="number-buttons">9</button>
+          <button class="number-buttons">0</button>
+          <div class="operator-buttons-container">
+            <button class="operator-buttons">+</button>
+            <button class="operator-buttons">-</button>
+            <button class="operator-buttons">x</button>
+            <button class="operator-buttons">/</button>
+            <button class="operator-buttons">!</button>
+            <button class="operator-buttons">√</button>
+          </div>
+        </div>
       </div>
     </div>
   </body>
