add equals button

--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
             <button class="operator-buttons">/</button>
             <button class="operator-buttons">!</button>
             <button class="operator-buttons">√</button>
+            <button class="operator-buttons">=</button>
           </div>
         </div>
       </div>
