--- a/index.html
+++ b/index.html
@@ -18,25 +18,25 @@
         <div class="screen"></div>
         <div class="all-buttons-container">
           <div class="number-buttons-container">
-            <button class="number-buttons">1</button>
-            <button class="number-buttons">2</button>
-            <button class="number-buttons">3</button>
-            <button class="number-buttons">4</button>
-            <button class="number-buttons">5</button>
-            <button class="number-buttons">6</button>
-            <button class="number-buttons">7</button>
-            <button class="number-buttons">8</button>
-            <button class="number-buttons">9</button>
-            <button class="number-buttons">0</button>
+            <button class="number-buttons" id="1">1</button>
+            <button class="number-buttons" id="2">2</button>
+            <button class="number-buttons" id="3">3</button>
+            <button class="number-buttons" id="4">4</button>
+            <button class="number-buttons" id="5">5</button>
+            <button class="number-buttons" id="6">6</button>
+            <button class="number-buttons" id="7">7</button>
+            <button class="number-buttons" id="8">8</button>
+            <button class="number-buttons" id="9">9</button>
+            <button class="number-buttons" id="0">0</button>
           </div>
           <div class="operator-buttons-container">
-            <button class="operator-buttons">+</button>
-            <button class="operator-buttons">-</button>
-            <button class="operator-buttons">x</button>
-            <button class="operator-buttons">/</button>
-            <button class="operator-buttons">!</button>
-            <button class="operator-buttons">√</button>
-            <button class="operator-buttons">=</button>
+            <button class="operator-buttons" id="+">+</button>
+            <button class="operator-buttons" id="-">-</button>
+            <button class="operator-buttons" id="x">x</button>
+            <button class="operator-buttons" id="/">/</button>
+            <button class="operator-buttons" id="!">!</button>
+            <button class="operator-buttons" id="√">√</button>
+            <button class="operator-buttons" id="=">=</button>
           </div>
         </div>
       </div>
